Resume Builder: fix Safari bug
Fix a bug with file upload button not showing in Safari.

--- a/Resume_Builder/src/main.css
+++ b/Resume_Builder/src/main.css
@@ -308,7 +308,7 @@ input[type="file"] + button {
 }
 input[type="file"] + button::before {
     content: "";
-    width: 100%;
+    width: 100%; height: 100%;
     background: url(assets/delete.svg) center no-repeat;
     transition: 0.2s ease;
 }
